Fix contrast, add AVIF support

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@
 }
 
 .prose a code {
-  @apply text-blue-800 dark:text-blue-500 no-underline hover:underline underline-offset-2;
+  @apply text-blue-900 dark:text-blue-500 no-underline hover:underline underline-offset-2;
 }
 
 .prose pre code {
